<resources>
    <string name="app_name">CarPro</string>
    <string name="member_managment">مدیریت اعضا</string>
    <string name="accepted_cars">خودرو های تایید شده</string>
    <string name="waiting_for_accept">در انتظار تایید</string>
    <string name="archived_cars">ارشیو خودرو ها</string>
    <string name="SamaneShaar">جامع ترین سامانه آگهی املاک سنندج</string>
    <string name="Reload">بارگذاری مجدد</string>
    <string name="Password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="txtAddAccount">حساب کاربری نداری؟ همین الان ثبت نام کن</string>
    <string name="AddAccount">حساب کاربری ایجاد کن</string>
    <string name="title_code">کد دریافتی را وارد کنید..</string>
    <string name="user_not_configurate">حساب کاربری شما توسط ادمین تایید نشده است</string>

    <string name="unknown_error">در برنامه خطای رخ داده است</string>
    <string name="error_occured">خطای رخ داده است</string>
    <string name="server_error">در سرور خطای رخ داده است</string>
    <string name="network_error">لطفا اتصال اینترنت خود را چک نمایید</string>
    <string name="timeout_error">اینترنت شما بسیار کند است</string>

    <string name="unknown_error_title">خطای نامشخص</string>
    <string name="error_occured_title">خطا</string>
    <string name="server_error_title">خطای سرور</string>
    <string name="network_error_title">خطای اینترنت</string>
    <string name="timeout_error_title">خطای اینترنت</string>


    <string name="code_digits">0123456789۰۱۲۳۴۵۶۷۸۹</string>

    <string name="brand">برند</string>
    <string name="engineSituation">وضعیت موتور</string>
    <string name="Chassis">وضعیت شاسی</string>
    <string name="InsuranceTime">مهلت بیمه</string>
    <string name="productionYear">سال تولید</string>
    <string name="productionYearFrom">سال تولید از</string>
    <string name="gearBox">گیربکس</string>
    <string name="ducument">سند</string>
    <string name="sales">نحوه ی فروش</string>
    <string name="exchange">معاوضه</string>
    <string name="address">آدرس</string>
    <string name="carPrice">قیمت</string>
    <string name="carDescription">توضیحات وارد شده توسط کاربر</string>
    <string name="yourExpert">کارشناس شما</string>
    <string name="milage"> کارکرد</string>
    <string name="notExchange"> مایل به معاوضه نیستم</string>
    <string name="Exchange"> مایل به معاوضه هستم</string>
    <string name="confirmed">تایید شده</string>
    <string name="not_confirmed">تایید نشده</string>

    <string name="categories">دسته بندی ها</string>
    <string name="fastSearch">جستجوی سریع</string>
    <string name="addComment">ثبت نظر</string>
    <string name="addAccuont">لطفا یک حساب کاربری ایجاد کنید</string>
    <string name="usersComments">نظرات کاربران</string>
    <string name="addPhoto">افزودن عکس</string>
    <string name="addRating">ثبت امتیاز</string>
    <string name="usersPhotos">تصاویر کاربران</string>
    <string name="moreInfo">اطلاعات بیشتر</string>
    <string name="showmore">نمایش بیشتر</string>
    <string name="locationInfo">اطلاعات مکان</string>
    <string name="sendPrivateMessage">ارسال پیام خصوصی</string>
    <string name="makePhoneCall">تماس تلفنی</string>
    <string name="instagramPage">صفحه اینستاگرام</string>
    <string name="telegramChannel">کانال تلگرام</string>
    <string name="commentPostedSuccessfully">نظر شما با موفقیت درج شد</string>
    <string name="postingComment">در حال درج کامنت...</string>
    <string name="createAccountFirst">ابتدا یک حساب کاربری ایجاد کنید</string>
    <string name="rateThisShop">به این مغازه امتیاز دهید</string>
    <string name="rateSentSuccessfully">نظر شما با موفقیت ثبت شد</string>
    <string name="rateSendingFailed">خطا در ثبت امتیاز</string>
    <string name="selectPhoto">عکس انتخاب کنید</string>
    <string name="submit">تایید</string>
    <string name="noPhotoSelected">عکسی انتخاب نشده</string>
    <string name="maximumPhotoSelectionReached3">حد مجاز انتخاب 3 عکس میباشد</string>
    <string name="maximumPhotoSelectionReached6">حد مجاز انتخاب 6 عکس میباشد</string>
    <string name="favorites">علاقه مندی ها</string>
    <string name="carDetails">جزئیات ماشین</string>
    <string name="allow_storage_permission">لطفا اجازه دسترسی به حافظه را صادر کنید</string>
    <string name="imageUploadingFailed">بارگذاری عکس با مشکل مواجه شد</string>
    <string name="accept">تایید</string>
    <string name="reject">رد کردن</string>
    <string name="edit">ویرایش</string>
    <string name="active">فعال</string>
    <string name="deactive">غیرفعال</string>
    <string name="status_changed">تغییر وضعیت انجام شد</string>
    <string name="status_not_changed">تغییر وضعیت با خطا مواجه شد</string>
    <string name="txt_ener_number">شماره موبایل خود را وارد نمایید</string>
    <string name="storage_permisison_needed">برای انتخاب عکس مجوز دسترسی به حافظه گوشی و دوربین نیاز است</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="exit_account">خروج از حساب</string>
    <string name="no_photo_selected">لطفا یک عکس انتخاب کنید</string>
    <string name="enable_permission">برای کار کردن اپلیکیشن باید مجوز ها فراخوانی شوند</string>
    <string name="upload_error">خطا در آپلود</string>
    <string name="file_error">فایل مورد نظر یا پاک شده یا برنامه به آن دسترسی ندارد</string>
    <string name="url_error">آدرس آپلود عکس اشتباه است</string>
    <string name="io_error">در خواندن عکس مورد نظر خطایی رخ داد</string>


</resources>