<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:src="@drawable/ic_userr"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_not_configurate"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/exit_app"
            />
        <Button
            android:id="@+id/btn_exit_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="12dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/exit_account"
            />

    </LinearLayout>


</LinearLayout>