<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:background="@color/colorWhite"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorRed"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="16dp"
      tools:layout_editor_absoluteY="18dp">

      <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:background="?selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        app:tint="#FFF" />

      <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/carDetails"
        android:textColor="#FFF"
        android:textSize="18sp" />
    </RelativeLayout>
  </androidx.appcompat.widget.Toolbar>

  <ProgressBar
    android:id="@+id/addCarLoading"
    style="?android:attr/progressBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical" >

      <include
        android:id="@+id/includeContentAddCar"
        layout="@layout/content_add_car_main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <include
        android:id="@+id/includeContentAddCarMoreInfo"
        layout="@layout/content_add_car_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <include
        android:id="@+id/includeContentAddCarDescription"
        layout="@layout/content_add_car_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <include
        android:id="@+id/includeContentAddCarContactInfo"
        layout="@layout/content_add_car_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <include
        android:id="@+id/includeContentAddCarPhotos"
        layout="@layout/content_add_car_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
      android:id="@+id/btnAccept"
      android:layout_width="0dp"
      android:layout_height="?actionBarSize"
      android:layout_weight="1"
      android:background="@color/colorBlue" >
      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/accept"
        android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/btnReject"
      android:layout_width="0dp"
      android:layout_height="?actionBarSize"
      android:layout_weight="1"
      android:background="@color/white" >

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/reject"
        android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/btnEdit"
      android:layout_width="0dp"
      android:layout_height="?actionBarSize"
      android:layout_weight="1"
      android:background="@color/white">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/black" />
    </RelativeLayout>
  </LinearLayout>

</LinearLayout>