<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/loginscreenbackground"
  android:clickable="true"
  android:orientation="vertical">

  <Button
    android:id="@+id/btn_log_in"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    android:layout_below="@id/textInputLayout"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="15dp"
    android:backgroundTint="@color/colorBlue"
    android:text="@string/login" />
  (Optional. Default is #ffffff)
  />


  <LinearLayout
    android:id="@+id/number_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/img_logo"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="30dp"
    android:orientation="horizontal"
    android:weightSum="10">

    <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:background="@drawable/stroke_relative_white"
      android:enabled="false"
      android:gravity="center"
      android:padding="5dp"
      android:text="+۹۸"
      android:textAppearance="?android:attr/textAppearanceInverse"
      android:textColor="@color/colorWhite"
      android:textSize="16sp" />

    <EditText
      android:id="@+id/txt_Mob"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="8"
      android:background="@drawable/stroke_edit_text_centeral_color"
      android:gravity="right"
      android:hint="شماره موبایل خود را وارد نمایید"
      android:inputType="number"
      android:padding="5dp"
      android:singleLine="true"
      android:textAppearance="?android:attr/textAppearanceInverse"
      android:textColor="@color/colorWhite"
      android:textColorHint="@color/colorWhite"
      android:textDirection="ltr"
      android:textSize="14sp" />

  </LinearLayout>


  <RelativeLayout
    android:id="@+id/NewAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_sign_up"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/stroke_relative_white"
    android:gravity="center"
    android:padding="10dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/AddAccount"
      android:textColor="@color/colorWhite"
      android:textSize="14sp" />

  </RelativeLayout>

  <TextView
    android:id="@+id/txt_sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btn_log_in"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="30dp"
    android:gravity="center_horizontal"
    android:text="@string/txtAddAccount"
    android:textColor="@color/white" />


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/number_layout"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="30dp"
    android:layoutDirection="ltr"
    android:textColorHint="@color/colorWhite"
    app:boxBackgroundColor="@color/white"
    app:hintTextColor="@color/white"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/colorWhite">

    <EditText
      android:id="@+id/txt_Password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/stroke_edit_text_withe"
      android:gravity="left"
      android:hint="@string/Password"
      android:inputType="textPassword"
      android:padding="0dp"
      android:singleLine="true"
      android:textColor="@color/colorWhite"
      android:textSize="14sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/img_logo"
    android:layout_width="140dp"
    android:layout_height="140dp"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:src="@drawable/logo_master" />

  <com.tuyenmonkey.mkloader.MKLoader
    android:id="@+id/mkLoader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:background="@drawable/circle_background"
    android:elevation="8dp"
    android:padding="8dp"
    android:visibility="gone"
    app:mk_color="@color/black"
    app:mk_type="FourPulse" />


</RelativeLayout>